--- a/ReimbursementApp/src/main/java/com/servlets/webapp/views/all_reimbursements.html
+++ b/ReimbursementApp/src/main/java/com/servlets/webapp/views/all_reimbursements.html
@@ -44,7 +44,7 @@
                                 aria-expanded="false">
                             </a>
                             <div class="dropdown-menu pull-left" aria-labelledby="dropdownId">
-                                <ul id="core-dropdown" style="list-style:nonex">
+                                <ul id="dropdown-list" style="list-style:nonex">
                                     
                                     <li class="nav-item active">
                                         <form action="../AllReimbursements" method="GET">
