--- a/ReimbursementApp/src/main/java/com/servlets/webapp/views/all_reimbursements.html
+++ b/ReimbursementApp/src/main/java/com/servlets/webapp/views/all_reimbursements.html
@@ -108,42 +108,8 @@
 
                         </div>
                     </div>
-                    <!--
-                    <div class="row">
-                        <div class="col-6">
-                            <reimbusements>
-                                
-                            </reimbursements>
-                            <div class="jumbotron jumbotron-fluid inner-left">
-                                <div class="inner-left-container">
-                                    <h1 class="display-3">Fluid jumbo heading</h1>
-                                    <p class="lead">Jumbo helper text</p>
-                                    <hr class="my-2">
-                                    <p>More info</p>
-                                    <p class="lead">
-                                        <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo
-                                            action name</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-6">
-                            <div class="jumbotron jumbotron-fluid inner-right">
-                                <div class="inner-right-container">
-                                    <h1 class="display-3">Fluid jumbo heading</h1>
-                                    <p class="lead">Jumbo helper text</p>
-                                    <hr class="my-2">
-                                    <p>More info</p>
-                                    <p class="lead">
-                                        <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo
-                                            action name</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    -->
-                    </div> <!-- end row -->
+                        <!-- All Reimbursements Injected Here From JS -->
+                    </div> 
                 </div>
             </div>
 
