--- a/ReimbursementApp/src/main/java/com/servlets/webapp/views/new_reimbursement.html
+++ b/ReimbursementApp/src/main/java/com/servlets/webapp/views/new_reimbursement.html
@@ -22,7 +22,7 @@
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
         <!-- Customer CSS -->
-        <link href="../styles/new_reimbursement.css" rel="stylesheet">
+        <link href="../styles/style.css" rel="stylesheet">
     </head>
 
     <body>
